--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^14.2.3",
     "@angular/platform-browser-dynamic": "^14.2.3",
     "@angular/router": "^14.2.0",
+    "angular-notifier": "^12.0.0",
     "express": "^4.18.1",
     "path": "^0.12.7",
     "rxjs": "~7.5.0",
